--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "webpack serve --env port=3000",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
-    "lint:ts": "eslint \"**/*.{ts, tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{ts, tsx}\" --fix",
-    "lint:scss": "stylelint \"**/*.scss\"",
-    "lint:scss:fix": "stylelint \"**/*.scss\" --fix"
+    "lint:ts": " eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix": " eslint \"**/*.{ts,tsx}\" --fix",
+    "lint:scss": "stylelint \"**/*.{css,scss}\"",
+    "lint:scss:fix": "stylelint \"**/*.{scss,scss}\" --fix"
   },
   "keywords": [],
   "author": "",
