Added and configured: Storybook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,7 @@
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx"
-  ]
+  ],
+  // для подсветки пропсов в stories
+  "strictBindCallApply": true
 }
