--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: Linting, testing, building
 run-name: ${{ github.actor }} is linting, testing, building
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   pipeline:
@@ -12,19 +12,19 @@ jobs:
     strategy:
       matrix:
         node-version: [ 17.x ]
-  steps:
-    - uses: actions/checkout@v2
-    - name: Starting Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: install modules
-      run: npm ci
-    - name: build production project
-      run: npm run build:prod
-    - name: linting typescript
-      run: npm run lint:ts
-    - name: linting scss
-      run: npm run lint:scss
-    - name: unit testing
-      run: npm run test:unit
+    steps:
+      - uses: actions/checkout@v2
+      - name: Starting Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: install modules
+        run: npm ci
+      - name: build production project
+        run: npm run build:prod
+      - name: linting typescript
+        run: npm run lint:ts
+      - name: linting scss
+        run: npm run lint:scss
+      - name: unit testing
+        run: npm run test:unit
