--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "0.8.3",
     "css-loader": "^6.6.0",
@@ -70,6 +71,8 @@
     "json-server": "^0.17.1",
     "loki": "^0.31.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
     "react-refresh": "0.12.0",
     "reg-cli": "^0.17.7",
     "regenerator-runtime": "^0.13.9",
@@ -89,7 +92,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
-    "i18next": "^21.6.11",
+    "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "normalize.css": "^8.0.1",
@@ -113,5 +116,16 @@
         "preset": "iPhone 7"
       }
     }
-  }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "ie >= 11",
+    "last 4 version",
+    "> 0.5%",
+    "not dead"
+  ]
 }
