--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     // esModuleInterop позволяет работать с пакетами, которые используют common js как с обычными пакетами с помощью import require module.export – короче, делают импорты в конфигах привычными
     "esModuleInterop": true,
     // allowSyntheticDefaultImports позволяет использовать импорты без звездочки (* as что-то)
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "isolatedModules": true
   },
   "ts-node": {
     "compilerOptions": {
