--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: install modules [--force]
-        run: npm ci
+      - name: install modules
+        run: npm ci --force
       - name: build production project
         run: npm run build:prod
         if: always()
