--- a/package.json
+++ b/package.json
@@ -105,7 +105,9 @@
   "dependencies": {
     "@headlessui-float/react": "^0.11.0",
     "@headlessui/react": "^1.7.13",
+    "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.8.0",
+    "@use-gesture/react": "^10.2.26",
     "axios": "^0.26.1",
     "concurrently": "^7.0.0",
     "i18next": "^22.4.14",
