--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     // baseUrl для импорта с абсолютными путями
     "baseUrl": ".",
     "paths": {
-      "*": ["./src/*"]
+      "@/*": ["./src/*"]
     },
     // esModuleInterop позволяет работать с пакетами, которые используют common js как с обычными пакетами с помощью import require module.export – короче, делают импорты в конфигах привычными
     "esModuleInterop": true,
