Added: vite for dev mode

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:vite": "vite",
     "start:dev": "concurrently \"npm:start\" \"npm:start:dev:server\"",
+    "start:dev:vite": "concurrently \"npm run start:vite\" \"npm:start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production apiUrl=https://prod-app-server.vercel.app",
     "build:dev": "webpack --env mode=development",
@@ -59,6 +61,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "0.8.3",
@@ -76,12 +79,14 @@
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
+    "i": "^0.3.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-html-reporters": "^3.1.4",
     "json-server": "^0.17.1",
     "loki": "^0.31.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "npm": "^9.6.5",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
     "react-refresh": "0.12.0",
@@ -98,6 +103,8 @@
     "ts-morph": "^18.0.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
+    "vite": "^4.3.1",
+    "vite-plugin-svgr": "^2.4.0",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
