--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-node": "^0.3.7",
-    "eslint-plugin-amake-plugin": "^0.0.0",
+    "eslint-plugin-amake-plugin": "^0.0.1",
     "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -86,6 +86,7 @@
     "json-server": "^0.17.1",
     "loki": "^0.31.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "mocha": "^10.2.0",
     "npm": "^9.6.5",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
