--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,4 +1,8 @@
-last 4 version
-> 0.5%
-not dead
+[production]
+defaults
 not IE 11
+
+[development]
+last 2 Chrome versions
+last 2 Firefox versions
+last 1 Safari version
