--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:ui:ok": "npx loki approve",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "ts-node scripts/clear-cache.ts"
   },
   "keywords": [],
   "author": "",
