--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.3",
-    "babel-plugin-i18next-extract": "0.8.3",
     "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
@@ -123,6 +122,7 @@
     "@reduxjs/toolkit": "^1.8.0",
     "@use-gesture/react": "^10.2.26",
     "axios": "^0.26.1",
+    "babel-plugin-i18next-extract": "^0.9.0",
     "concurrently": "^7.0.0",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^6.1.3",
