--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "prepare": "husky install",
     "postinstall": "ts-node scripts/clear-cache.ts"
   },
+  "lint-staged": {
+    "**/*.{ts,tsx}": "eslint",
+    "**/*.{css, scss}": "stylelint"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -88,6 +92,7 @@
     "jest": "^27.5.1",
     "jest-html-reporters": "^3.1.4",
     "json-server": "^0.17.1",
+    "lint-staged": "^13.2.2",
     "loki": "^0.31.0",
     "mini-css-extract-plugin": "^2.5.3",
     "mocha": "^10.2.0",
