--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "storybook": "start-storybook -p 6006 -c ./config/storybook",
         "storybook:build": "build-storybook -c ./config/storybook",
         "prepare": "husky install",
+        "generate:slice": "node ./scripts/createSlice/index.js",
         "postinstall": "ts-node scripts/clear-cache.ts"
     },
     "lint-staged": {
