--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
         "storybook": "start-storybook -p 6006 -c ./config/storybook",
         "storybook:build": "build-storybook -c ./config/storybook",
         "prepare": "husky install",
+        "postinstall": "ts-node scripts/clear-cache.ts",
         "generate:slice": "node ./scripts/createSlice/index.js",
-        "postinstall": "ts-node scripts/clear-cache.ts"
+        "remove:feature": "ts-node ./scripts/remove-feature.ts"
     },
     "lint-staged": {
         "**/*.{ts,tsx}": [
