--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,9 @@
 {
     "extends": "stylelint-config-standard-scss",
+    "plugins": ["stylelint-scss"],
     "rules": {
+        "at-rule-no-unknown": null,
+        "scss/at-rule-no-unknown": true,
         "selector-class-pattern": null,
         "color-function-notation": "legacy",
         "selector-pseudo-class-no-unknown": [
