--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     },
     "lint-staged": {
         "**/*.{ts,tsx}": [
-            "prettier --list-different",
+            "prettier --write",
             "eslint"
         ],
         "**/*.{css,scss}": "stylelint"
@@ -119,7 +119,7 @@
         "storybook-addon-mock": "^3.2.0",
         "storybook-addon-themes": "^6.1.0",
         "style-loader": "^3.3.1",
-        "stylelint": "^14.5.3",
+        "stylelint": "^14.16.1",
         "stylelint-config-standard-scss": "^3.0.0",
         "ts-loader": "^9.2.6",
         "ts-morph": "^18.0.0",
@@ -149,7 +149,8 @@
         "react-dom": "^18.2.0",
         "react-i18next": "^12.2.0",
         "react-redux": "^8.0.5",
-        "react-router-dom": "^6.2.1"
+        "react-router-dom": "^6.2.1",
+        "stylelint-scss": "^5.0.0"
     },
     "loki": {
         "configurations": {
