--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,11 @@
             "module": "CommonJS"
         }
     },
-    "include": ["./config/jest/setupTests.ts", "./src/**/*.ts", "./src/**/*.tsx"],
+    "include": [
+        "./config/jest/setupTests.ts",
+        "./src/**/*.ts",
+        "./src/**/*.tsx"
+    ],
     // для подсветки пропсов в stories
     "strictBindCallApply": true
 }
