Updated: css loader config

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -11,7 +11,8 @@
             {
                 "ignorePseudoClasses": ["global", "local"]
             }
-        ]
+        ],
+        "scss/no-global-function-names": null
     },
     "ignoreFiles": ["build/css/**.css"]
 }
